--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
 
+    //dexter permission manager
+    implementation 'com.karumi:dexter:6.2.3'
+
+    //downloader library
+    implementation 'com.mindorks.android:prdownloader:0.6.0'
+
 }
